server side rendering

--- a/next-feature/styles/globals.css
+++ b/next-feature/styles/globals.css
@@ -24,3 +24,12 @@ a {
     background: black;
   }
 }
+/* 
+.menu-bar {
+  display: flex;
+  column-gap: 50px;
+}
+
+ul {
+  list-style-type: none;
+} */
